...
        val rideWithGPSClientId: String? = null,
        val openWeatherApiKey: String? = null
    )

    companion object {
        val Default = AppConfig(
            coalitionName = "Stone Bicycle Coalition",
            shortName = "SBC",
            tagline = "Building Community Through Cycling",
            websiteURL = "https://stonebicyclecoalition.com",
            email = "info@stonebicyclecoalition.com"
        )
    }
...
